[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["zx9"]
edition = "2018"
description = "Simple Rust code to be compiled to Wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"